--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.16.0",
+    "history": "4.10.1",
     "jest": "24.9.0",
     "react-test-renderer": "16.11.0",
     "webpack": "4.41.2",
